# elna-gpt

./: .gitignore  Cargo.toml  README.md
gpt2-inference/: Cargo.toml
gpt2-inference/src/: main.rs
ic-llama3/: Cargo.toml  README.md  dfx.json
ic-llama3/src/ic-llama3-backend/: Cargo.toml
ic-llama3/src/ic-llama3-backend/src/: inference.rs  lib.rs
ic_gpt2/: Cargo.toml  README.md  canister_ids.json  dfx.json
ic_gpt2/scripts/: build.sh  did.zsh
ic_gpt2/src/gpt2_tokenizer_backend/: Cargo.toml  gpt2_tokenizer_backend.did
ic_gpt2/src/gpt2_tokenizer_backend/src/: lib.rs  tokenizer.rs
ic_gpt2/src/ic_gpt2_backend/: Cargo.toml  ic_gpt2_backend.did
ic_gpt2/src/ic_gpt2_backend/src/: lib.rs  onnx.rs  tokenizer.rs
ic_llama3/: Cargo.toml  README.md  dfx.json  did.zsh
ic_llama3/scripts/: buildtok.sh
ic_llama3/src/ic_llama3_backend/: Cargo.toml  ic_llama3_backend.did
ic_llama3/src/ic_llama3_backend/src/: inference.rs  lib.rs  onnx.rs  tokenizer.rs
ic_llama3/src/llama3_tokenizer_backend/: Cargo.toml  llama3_tokenizer_backend.did
ic_llama3/src/llama3_tokenizer_backend/src/: lib.rs  tokenizer.rs
python_scripts/: GPT2_kv.py  export.py  onnx_export_with_logits.py
src/: main.rs
