[package]
name = "inference"
version = "0.1.0"
edition = "2021"

[dependencies]
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
anyhow = "1.0"
ndarray-npy = "0.8.1"
ndarray = "0.15.6"
tokenizers = { version = "0.19.1", default-features = false, features = ["unstable_wasm"] }
rand = "0.8.5"
half = "2.4.1"
