[package]
name = "ic-llama3-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }
anyhow = "1.0"
ndarray-npy = "0.8.1"
ndarray = "0.15.6"
tokenizers = { version = "0.19.1", default-features = false, features = ["unstable_wasm"] }
rand = "0.8.5"
half = "2.4.1"